@@ -120,6 +120,7 @@ public:
         return m_current;
     }
     virtual size_t GetSelections(wxArrayTreeItemIds&) const;
+    virtual wxTreeItemId GetFocusedItem() const { return m_current; }
 
     virtual wxTreeItemId GetItemParent(const wxTreeItemId& item) const;
     virtual wxTreeItemId GetFirstChild(const wxTreeItemId& item,
